Fix static image height on mobile slider

--- a/src/components/horizontal-slider-alt/horizontal-slider-alt.css
+++ b/src/components/horizontal-slider-alt/horizontal-slider-alt.css
@@ -44,6 +44,7 @@
 
     &__slide {
       margin-right: 20px;
+      min-height: 380px !important;
 
       &:last-child {
         margin-right: 0;
@@ -123,7 +124,7 @@
 
       img {
         width: 100%;
-        height: 100%;
+        height: 380px;
         object-fit: cover;
       }
 
