--- a/src/components/horizontal-slider/horizontal-slider.css
+++ b/src/components/horizontal-slider/horizontal-slider.css
@@ -110,7 +110,7 @@
 
       img {
         width: 100%;
-        height: 100%;
+        height: 380px;
         object-fit: cover;
       }
 
